🚀 4단계 - 사다리(리팩터링) (#2029)
* Refactor : 3단계 피드백 반영

* Fix : 사다리 게임 진행 방향 구현 변경

* Feat : 책임주도설계 인터페이스 생성

* Feat : 사다리 도메인 구현

* Feat : 사다리 UI 연결